k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sendapro-backend-service
  namespace: sendapro
spec:
  selector:
    app: sendapro-backend
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: grpc
      port: 50051
      targetPort: 50051
      protocol: TCP
